--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,89 @@
-/* Estilos para las imágenes */
-/*#film-list img {
-  width: 100px; 
-}/* /* Tamaño inicial de las imágenes */
 
-/* Estilos para las imágenes */
+
+
+#header {
+  background-image: url('https://pbs.twimg.com/media/CdCAJOMUMAAeLFB.jpg '),url('https://th.bing.com/th/id/R.ab4ab26ebdeb8b61f14a6ba4f351c5c2?rik=leEPKuxfPnHZsA&riu=http%3a%2f%2f2.bp.blogspot.com%2f-i4-kOut1BHM%2fT5M9vyj93cI%2fAAAAAAAACjk%2fC3km5VF7Y_w%2fs1600%2fim.jpg&ehk=5NeD8L2JrNLI0yRR2lw1TrIb3NpdKFUw409y5hQ4Hqk%3d&risl=&pid=ImgRaw&r=0 ' );
+  background-size: cover;
+  background-position: center;
+  animation: backgroundScroll 5s linear infinite; /* Establece la animación de desplazamiento de fondo */
+}
+
+@keyframes backgroundScroll {
+  0% {
+    background-position: 0 0; /* Inicia las imágenes en la posición inicial */
+  }
+  100% {
+    background-position: 100% 100%; /* Desplaza las imágenes diagonalmente */
+  }
+  }
+  h4{
+    font:small-caps 100%/100% serif ;
+    color: rgb(79, 62, 62); 
+    background-color: #f4faf4c1;
+    font-size: 20px;
+    text-align: center;
+    display: inline-block;
+    border-radius: 10px;
+    transform: translate(395%) ;
+}
+h1{
+  font:small-caps 100%/100% serif ;
+  color: rgb(79, 62, 62);
+   background-color: #f4faf4c1;
+   font-size: 70px;
+   text-align: center;
+   border-radius: 400px;
+  }
+  p1{
+    font:small-caps 100%/100% serif ;
+    color: rgb(252, 250, 250);
+    background-color: #2f2d2dc1;
+    font-size: 25px;
+    border-radius: 10px;
+    display: inline-block;
+    transform: translate(50%) ;
+  }
+  p2{
+    color: black;
+    font-size: 25px;
+    display: inline-block;
+    transform: translate(545%) ;
+
+  }
+    h2{
+      font:small-caps 100%/100% serif ;
+      color: rgb(79, 62, 62);
+      font-size: 50px;
+    }
+p3{
+      font:small-caps 100%/100% serif ;
+      color: rgb(79, 62, 62);
+      font-size: 30px;
+}
+.contenedor{ 
+  display: flex;
+  justify-content: center;
+
+
+}
+img{
+  width: 25%;
+  margin: left 25px;
+ border-radius: 15px;
+ float: inline-end;
+
+}
 #film-list {
     column-count: 4; /* Número de columnas deseadas */
     column-gap: 10px; /* Espacio entre las columnas */
     vertical-align: middle;
-    
-  }
+    #header {
+  background-image: url('imagen1.jpg'); /* Establece la imagen de fondo */
+  background-size: cover;
+  background-position: center;
+}
 
+  }
 #film-list img {
   margin-right: 30px; /* Espacio entre las imágenes */
   width: 200px;
@@ -18,3 +91,4 @@
   display: flex
   
   }
+
