--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,9 @@
-body{
-  background-color: aqua;
-}
-
 
 #header {
   background-image: url('https://pbs.twimg.com/media/CdCAJOMUMAAeLFB.jpg '),url('https://th.bing.com/th/id/R.ab4ab26ebdeb8b61f14a6ba4f351c5c2?rik=leEPKuxfPnHZsA&riu=http%3a%2f%2f2.bp.blogspot.com%2f-i4-kOut1BHM%2fT5M9vyj93cI%2fAAAAAAAACjk%2fC3km5VF7Y_w%2fs1600%2fim.jpg&ehk=5NeD8L2JrNLI0yRR2lw1TrIb3NpdKFUw409y5hQ4Hqk%3d&risl=&pid=ImgRaw&r=0 ' );
   background-size: cover;
   background-position: center;
-  animation: backgroundScroll 5s linear infinite; /* Establece la animación de desplazamiento de fondo */
+  animation: backgroundScroll 25s linear infinite; /* Establece la animación de desplazamiento de fondo */
 }
 
 @keyframes backgroundScroll {
@@ -18,74 +14,54 @@ body{
     background-position: 100% 100%; /* Desplaza las imágenes diagonalmente */
   }
   }
-  h4{
+
+  h5{
     font:small-caps 100%/100% serif ;
-    color: rgb(79, 62, 62); 
-    background-color: #f4faf4c1;
-    font-size: 20px;
+    color:beige ; 
+    background-color:#406f9de4 ;
+    font-size: 25px;
     text-align: center;
     display: inline-block;
     border-radius: 10px;
-    transform: translate(395%) ;
+    transform: translate(320%) ;
 }
 h1{
+  width: 400px;
   font:small-caps 100%/100% serif ;
-  color: rgb(79, 62, 62);
-   background-color: #f4faf4c1;
-   font-size: 70px;
+  color: #406f9de4;
+   background-color:#efebe5bd ;
+   font-size: 80px;
    text-align: center;
-   border-radius: 400px;
+   border-radius: 20px;
+   margin: auto;
   }
-  p1{
+  h3{
     font:small-caps 100%/100% serif ;
-    color: rgb(252, 250, 250);
-    background-color: #2f2d2dc1;
-    font-size: 25px;
+    color: beige;
+    background-color:#406f9de4;
+    font-size: 35px;
     border-radius: 10px;
     display: inline-block;
-    transform: translate(50%) ;
+    transform: translate(20%) ;
   }
-  p2{
-    color: black;
+
+ h6{
+    color: beige;
     font-size: 25px;
     display: inline-block;
     transform: translate(545%) ;
-
+    background-color:#406f9de4;
   }
-    h2{
-      font:small-caps 100%/100% serif ;
-      color: rgb(79, 62, 62);
-      font-size: 50px;
-    }
-p3{
-      font:small-caps 100%/100% serif ;
-      color: rgb(79, 62, 62);
-      font-size: 30px;
-}
-.contenedor{ 
-  display: flex;
-  justify-content: center;
-
-
-}
-img{
-  width: 25%;
-  margin: left 25px;
- border-radius: 15px;
- float: inline-end;
-
-}
+    
 #film-list {
     column-count: 4; /* Número de columnas deseadas */
     column-gap: 10px; /* Espacio entre las columnas */
     vertical-align: middle;
-    #header {
-  background-image: url('imagen1.jpg'); /* Establece la imagen de fondo */
-  background-size: cover;
-  background-position: center;
+    background-image: url('imagen1.jpg'); /* Establece la imagen de fondo */
+    background-size: cover;
+    background-position: center;
 }
-
-  }
+  
 #film-list img {
   margin-right: 30px; /* Espacio entre las imágenes */
   width: 200px;
