--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,7 @@
+body{
+background-color:  #406f9d7f;
 
+}
 #header {
   background-image: url('https://pbs.twimg.com/media/CdCAJOMUMAAeLFB.jpg '),url('https://th.bing.com/th/id/R.ab4ab26ebdeb8b61f14a6ba4f351c5c2?rik=leEPKuxfPnHZsA&riu=http%3a%2f%2f2.bp.blogspot.com%2f-i4-kOut1BHM%2fT5M9vyj93cI%2fAAAAAAAACjk%2fC3km5VF7Y_w%2fs1600%2fim.jpg&ehk=5NeD8L2JrNLI0yRR2lw1TrIb3NpdKFUw409y5hQ4Hqk%3d&risl=&pid=ImgRaw&r=0 ' );
   background-size: cover;
@@ -15,22 +18,46 @@
   }
   }
 
+  #showFilmsButton {
+    width: auto;
+    position: relative;
+    top: calc(100% + 10px);
+    left: 10%;
+    transform: translateX(-50%);
+    color: #406f9de4;
+    font-size: 120%
+
+  }
+  
+  #goHomeButton {
+    width: auto;
+    position:relative;
+    top: calc(100% + 10px);
+    left: 10%;
+    transform: translateX(-50%);
+    color: #406f9de4;
+    font-size: 120%
+  }
+  
+
+
   h5{
     font:small-caps 100%/100% serif ;
     color:beige ; 
     background-color:#406f9de4 ;
-    font-size: 25px;
+    font-size: 190%;
     text-align: center;
     display: inline-block;
-    border-radius: 10px;
-    transform: translate(320%) ;
+    border-radius: 10%;
+    transform: translate(240%) ;
 }
 h1{
-  width: 400px;
-  font:small-caps 100%/100% serif ;
-  color: #406f9de4;
+  height: 100px;
+  width: 600px;
+  font:small-caps 100px/100px serif ;
+   color: #406f9de4;
    background-color:#efebe5bd ;
-   font-size: 80px;
+   font-size: 500%;
    text-align: center;
    border-radius: 20px;
    margin: auto;
@@ -39,20 +66,13 @@ h1{
     font:small-caps 100%/100% serif ;
     color: beige;
     background-color:#406f9de4;
-    font-size: 35px;
+    font-size: 30px;
     border-radius: 10px;
     display: inline-block;
-    transform: translate(20%) ;
+    transform: translate(30%) ;
+    text-align: center;
   }
 
- h6{
-  height: 40% ;
-    color: beige;
-    font-size: 25px;
-    display: inline-block;
-    transform: translate(280%) ;
-    background-color:#406f9de4;
-  }
     
 #film-list {
     column-count: 4; /* Número de columnas deseadas */
@@ -69,5 +89,4 @@ h1{
   height: 300px;
   display: flex
   
-  }
-
+}
