--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,7 @@ background-color:  #406f9d7f;
 
   h5{
     height: 5%;
-  width: 30%;
+  width: 15%;
    font:small-caps 80%/80% ;
    color:beige;
    background-color: #406f9de4;
@@ -54,8 +54,8 @@ background-color:  #406f9d7f;
 }
 h1{
   height: 200%;
-  width: 80%;
-  font:small-caps 100px/100px serif ;
+  width: 40%;
+  font:small-caps 80%/80% serif ;
    color: #406f9de4;
    background-color:#efebe5bd ;
    font-size: 600%;
@@ -64,12 +64,12 @@ h1{
    margin: auto;
   }
   h3{ 
-    height: 200%;
-    width: 80%;
+    height: 10%;
+    width: 50%;
     font:small-caps 100%/100% serif ;
     color: beige;
     background-color:#406f9de4;
-    font-size: 200%;
+    font-size: 150%;
     border-radius: 10%;
     text-align: center;
     margin: auto;
