--- a/src/style.css
+++ b/src/style.css
@@ -1,24 +1,29 @@
-body{
-background-color:  #406f9d7f;
+body {
+    background-color: #406f9d7f;
 
 }
+
 #header {
-  background-image: url('https://i.postimg.cc/FRz3f2dz/Dise-o-sin-t-tulo-2-1-1.png');
-  background-size: cover;
-  background-position: center;
-  animation: backgroundScroll 25s linear infinite; /* Establece la animación de desplazamiento de fondo */
+    background-image: url('https://i.postimg.cc/FRz3f2dz/Dise-o-sin-t-tulo-2-1-1.png');
+    background-size: cover;
+    background-position: center;
+    animation: backgroundScroll 25s linear infinite;
+    /* Establece la animación de desplazamiento de fondo */
 }
 
 @keyframes backgroundScroll {
-  0% {
-    background-position: 0 0; /* Inicia las imágenes en la posición inicial */
-  }
-  100% {
-    background-position: 100% 100%; /* Desplaza las imágenes diagonalmente */
-  }
-  }
+    0% {
+        background-position: 0 0;
+        /* Inicia las imágenes en la posición inicial */
+    }
 
-  #showFilmsButton {
+    100% {
+        background-position: 100% 100%;
+        /* Desplaza las imágenes diagonalmente */
+    }
+}
+
+#showFilmsButton {
     width: auto;
     position: relative;
     top: calc(100% + 100%);
@@ -26,69 +31,87 @@ background-color:  #406f9d7f;
     transform: translateX(-50%);
     color: #406f9de4;
     font-size: 120%
+}
 
-  }
-  
-  #goHomeButton {
+#goHomeButton {
     width: auto;
-    position:relative;
+    position: relative;
     top: calc(100% + 100%);
     left: 10%;
     transform: translateX(-50%);
     color: #406f9de4;
     font-size: 120%
-  }
-  
-
-
-  h5{
-    height: 5%;
-  width: 15%;
-   font:small-caps 80%/80% ;
-   color:beige;
-   background-color: #406f9de4;
-   font-size: 200%;
-   text-align: center;
-   border-radius: 10%;
-   margin: auto;  
 }
-h1{
-  height: 200%;
-  width: 40%;
-  font:small-caps 80%/80% serif ;
-   color: #406f9de4;
-   background-color:#efebe5bd ;
-   font-size: 600%;
-   text-align: center;
-   border-radius: 10%;
-   margin: auto;
-  }
-  h3{ 
+
+
+
+h5 {
+    height: 5%;
+    width: 15%;
+    font: small-caps 80%/80%;
+    color: beige;
+    background-color: #406f9de4;
+    font-size: 200%;
+    text-align: center;
+    border-radius: 10%;
+    margin: auto;
+}
+
+h1 {
+    height: 200%;
+    width: 40%;
+    font: small-caps 80%/80% serif;
+    color: #406f9de4;
+    background-color: #efebe5bd;
+    font-size: 600%;
+    text-align: center;
+    border-radius: 10%;
+    margin: auto;
+}
+
+h3 {
     height: 10%;
     width: 50%;
-    font:small-caps 100%/100% serif ;
+    font: small-caps 100%/100% serif;
     color: beige;
-    background-color:#406f9de4;
+    background-color: #406f9de4;
     font-size: 150%;
     border-radius: 10%;
     text-align: center;
     margin: auto;
-  }
+}
 
-    
+
 #film-list {
-    column-count: 4; /* Número de columnas deseadas */
-    column-gap: 10%; /* Espacio entre las columnas */
+    column-count: 4;
+    /* Número de columnas deseadas */
+    column-gap: 10%;
+    /* Espacio entre las columnas */
     vertical-align: middle;
-    background-image: url('imagen1.jpg'); /* Establece la imagen de fondo */
+    background-image: url('imagen1.jpg');
+    /* Establece la imagen de fondo */
     background-size: cover;
     background-position: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-items: flex-start;
 }
-  
+
+
 #film-list img {
-  margin-right: 30%; /* Espacio entre las imágenes */
-  width: 100%;
-  height: 100%;
-  display: flex
-  
+    margin-right: 30%;
+    /* Espacio entre las imágenes */
+    width: 90%;
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    
+}
+
+/*#film-list img {
+    width: inherit;
+    margin: 02 rem 3.6 rem 2 rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
