--- a/src/style.css
+++ b/src/style.css
@@ -54,14 +54,20 @@ h5 {
     margin: auto;
 }
 .ordenador{
-  background-color:  #406f9de4;
-  color: white; 
-  padding: 10px 20px; 
+  background-color:#406f9d8c ;
+  color: rgb(255, 255, 255); 
+  padding: 5px 10px; 
   font-size: 16px;
   border: none;
   cursor: pointer;
   border-radius: 4px; 
   text-decoration: none;
+}
+.buscador {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
 }
 
 h1 {
@@ -70,18 +76,18 @@ h1 {
     font: small-caps 80%/80% serif;
     color: #406f9de4;
     background-color: #efebe5bd;
-    font-size: 600%;
+    font-size: 630%;
     text-align: center;
     border-radius: 10%;
     margin: auto;
 }
 h3 {
     height: 10%;
-    width: 50%;
+    width: 70%;
     font: small-caps 100%/100% serif;
     color: beige;
     background-color: #406f9de4;
-    font-size: 150%;
+    font-size: 200%;
     border-radius: 10%;
     text-align: center;
     margin: auto;
@@ -92,35 +98,33 @@ h2 {
   font-size: 20px;
   margin-bottom: 8px;
   text-align: center;
-  color: black;
+  color: rgb(255, 250, 250);
 }
 p{
 background-color:rgb(226, 220, 220);
 font: size 30px;
 text-align: center ;
-color: #070707f7;
+color: #535050;
 }
-.buscador{
-  width:40%;
-  height: 20%;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  }
+
 input{
   outline: none;
   box-sizing: border-box;
 height:20%;
-width: 50%;
+width: 20%;
 padding: 0 20;
 color: black;
 border-radius: 50px;
 font-size: 20px;
-border: 1px solid rgba(0, 55, 255, 0.909);
+border: 3px solid #406f9de4;
 transition: all .7s ease;
+display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 ::placeholder{ 
-  color: rgb(125, 121, 121);
+  color: #406f9de4
 }
 .primera-interfaz{
   display: block;
