cambios en css peliculas

--- a/src/style.css
+++ b/src/style.css
@@ -139,17 +139,19 @@ display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-.pelicula {
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  width: 5%;
-  margin: 8px;
+#contenedor-peliculas .pelicula {
+  border: 3px solid#406f9d96 ; /* Cambia "red" al color de borde deseado */
+  border-radius: 5%;
+  margin: 10px;
+  text-align: center;
+  box-shadow:  0px 2px 6px rgba(0, 0, 0, 20);
 }
 
-
-.imagen-pelicula {
-  width: 80%;
+#contenedor-peliculas .pelicula .imagen-pelicula {
+  width: 70%; /* Ajusta el ancho de la imagen según tus necesidades */
+  margin: 0 auto; /* Centra horizontalmente la imagen */
+  border-radius: 5%;
+  box-shadow:  0px 2px 6px rgba(0, 0, 0, 20);
 }
 
 /* Media query para computador */
