--- a/src/style.css
+++ b/src/style.css
@@ -18,30 +18,24 @@ body {
         background-position: 100% 100%;
         /* Desplaza las imágenes diagonalmente */
     }
-}
-
-#goHomeButton {
+}#goHomeButton {
   background-color:  #406f9de4;
-  color: white; 
-  padding: 10px 20px; 
+  color: white;
+  padding: 10px 20px;
   font-size: 16px;
   border: none;
   cursor: pointer;
-  border-radius: 4px; 
+  border-radius: 4px;
   text-decoration: none;
-}
-
-#showFilmsButton{
+}#showFilmsButton{
   background-color:  #406f9de4;
-  color: white; 
-  padding: 10px 20px; 
+  color: white;
+  padding: 10px 20px;
   font-size: 16px;
   border: none;
   cursor: pointer;
-  border-radius: 4px; 
-  text-decoration: none;
-
-}
+  border-radius: 4px;
+  text-decoration: none;}
 h5 {
     height: 5%;
     width: 15%;
@@ -54,101 +48,92 @@ h5 {
     margin: auto;
 }
 .ordenador{
-  background-color:  #406f9de4;
-  color: white; 
-  padding: 10px 20px; 
+  background-color:#406f9d8c ;
+  color: rgb(255, 255, 255);
+  padding: 5px 10px;
   font-size: 16px;
   border: none;
   cursor: pointer;
-  border-radius: 4px; 
+  border-radius: 4px;
   text-decoration: none;
 }
-
-h1 {
+.buscador {
+  display: flex;
+  justify-content: center;
+  align-items: center;}h1 {
     height: 200%;
     width: 40%;
     font: small-caps 80%/80% serif;
     color: #406f9de4;
     background-color: #efebe5bd;
-    font-size: 600%;
+    font-size: 630%;
     text-align: center;
     border-radius: 10%;
     margin: auto;
 }
 h3 {
     height: 10%;
-    width: 50%;
+    width: 70%;
     font: small-caps 100%/100% serif;
     color: beige;
     background-color: #406f9de4;
-    font-size: 150%;
+    font-size: 200%;
     border-radius: 10%;
     text-align: center;
     margin: auto;
-}
-
-h2 {
+}h2 {
   background-color: #406f9d75;
   font-size: 20px;
   margin-bottom: 8px;
   text-align: center;
-  color: black;
+  color: rgb(255, 250, 250);
 }
 p{
 background-color:rgb(226, 220, 220);
 font: size 30px;
 text-align: center ;
-color: #070707f7;
-}
-.buscador{
-  width:40%;
-  height: 20%;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  }
-input{
+color: #535050
+;
+}input{
   outline: none;
   box-sizing: border-box;
 height:20%;
-width: 50%;
+width: 20%;
 padding: 0 20;
 color: black;
 border-radius: 50px;
 font-size: 20px;
-border: 1px solid rgba(0, 55, 255, 0.909);
+border: 3px solid #406f9de4;
 transition: all .7s ease;
+display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
-::placeholder{ 
-  color: rgb(125, 121, 121);
+::placeholder{
+  color: #406f9de4
 }
 .primera-interfaz{
   display: block;
-}
-
-.segunda-interfaz{
+}.segunda-interfaz{
   display: none;
-}
-
-#contenedor-peliculas {
+}#contenedor-peliculas {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-.pelicula {
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  width: 5%;
-  margin: 8px;
-}
-
-
-.imagen-pelicula {
-  width: 80%;
-}
-
-/* Media query para computador */
+#contenedor-peliculas .pelicula {
+  border: 3px solid#406f9d96 ; /* Cambia "red" al color de borde deseado */
+  border-radius: 5%;
+  margin: 10px;
+  text-align: center;
+  box-shadow:  0px 2px 6px rgba(0, 0, 0, 20);
+}#contenedor-peliculas .pelicula .imagen-pelicula {
+  width: 70%; /* Ajusta el ancho de la imagen según tus necesidades */
+  margin: 0 auto; /* Centra horizontalmente la imagen */
+  border-radius: 5%;
+  box-shadow:  0px 2px 6px rgba(0, 0, 0, 20);
+}/* Media query para computador */
 @media (min-width: 1024px) {
   .header-ghibli {
     padding: 16px 0;
