--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ h5 {
     margin: auto;
 }
 .ordenador{
-  background-color:#406f9d8c ;
+  background-color:#406f9d;
   color: rgb(255, 255, 255); 
   padding: 5px 10px; 
   font-size: 16px;
@@ -85,13 +85,14 @@ h3 {
     border-radius: 10%;
     text-align: center;
     margin: auto;
-}h2 {
-  background-color: #406f9d75;
+}
+h2 {
   font-size: 20px;
   margin-bottom: 8px;
   text-align: center;
   color: rgb(255, 250, 250);
 }
+
 p{
 background-color:rgb(226, 220, 220);
 font: size 30px;
@@ -104,7 +105,6 @@ input{
   box-sizing: border-box;
 height:20%;
 width: 20%;
-padding: 0 20;
 color: black;
 border-radius: 50px;
 font-size: 20px;
@@ -114,10 +114,11 @@ display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+
 }
-::placeholder{ 
-  color: #406f9de4
-}
+
+
 .primera-interfaz{
   display: block;
 }.segunda-interfaz{
@@ -133,6 +134,7 @@ display: flex;
   margin: 10px;
   text-align: center;
   box-shadow:  0px 2px 6px rgba(0, 0, 0, 20);
+  background-color: #3b6793f8;
 }
 
 #contenedor-peliculas .pelicula .imagen-pelicula {
