--- a/src/style.css
+++ b/src/style.css
@@ -47,7 +47,7 @@ h5 {
     border-radius: 10%;
     margin: auto;
 }
-.ordenador{
+.sorter{
   background-color:#406f9d8c ;
   color: rgb(255, 255, 255); 
   padding: 5px 10px; 
@@ -57,7 +57,7 @@ h5 {
   border-radius: 4px;
   text-decoration: none;
 }
-.buscador {
+.searchbar {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -118,16 +118,16 @@ display: flex;
 ::placeholder{ 
   color: #406f9de4
 }
-.primera-interfaz{
+.first-interface{
   display: block;
-}.segunda-interfaz{
+}.second-interface{
   display: none;
-}#contenedor-peliculas {
+}#container-films {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-#contenedor-peliculas .pelicula {
+#container-films .film {
   border: 3px solid#406f9d96 ; /* Cambia "red" al color de borde deseado */
   border-radius: 5%;
   margin: 10px;
@@ -135,7 +135,7 @@ display: flex;
   box-shadow:  0px 2px 6px rgba(0, 0, 0, 20);
 }
 
-#contenedor-peliculas .pelicula .imagen-pelicula {
+#container-films .film .img-film {
   width: 70%; /* Ajusta el ancho de la imagen según tus necesidades */
   margin: 0 auto; /* Centra horizontalmente la imagen */
   border-radius: 5%;
@@ -147,7 +147,7 @@ display: flex;
   .header-ghibli {
     padding: 16px 0;
   }
-  .pelicula {
+  .film {
     width: 31%;
   }
 }
