--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,9 @@ body {
         background-position: 100% 100%;
         /* Desplaza las imágenes diagonalmente */
     }
-}#goHomeButton {
+}#goHomeButton,
+#showFilmsButton,
+.ordenador{ 
   background-color:  #406f9de4;
   color: white;
   padding: 10px 20px;
@@ -27,15 +29,7 @@ body {
   cursor: pointer;
   border-radius: 4px;
   text-decoration: none;
-}#showFilmsButton{
-  background-color:  #406f9de4;
-  color: white;
-  padding: 10px 20px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  border-radius: 4px;
-  text-decoration: none;}
+}
 h5 {
     height: 5%;
     width: 15%;
@@ -47,16 +41,7 @@ h5 {
     border-radius: 10%;
     margin: auto;
 }
-.ordenador{
-  background-color:#406f9d;
-  color: rgb(255, 255, 255); 
-  padding: 5px 10px; 
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  border-radius: 4px;
-  text-decoration: none;
-}
+
 .buscador {
   display: flex;
   justify-content: center;
@@ -117,13 +102,13 @@ display: flex;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 
 }
-
-
 .primera-interfaz{
   display: block;
-}.segunda-interfaz{
+}
+.segunda-interfaz{
   display: none;
-}#contenedor-peliculas {
+}
+#contenedor-peliculas {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -144,6 +129,25 @@ display: flex;
   box-shadow:  0px 2px 6px rgba(0, 0, 0, 20);
 }
 
+/* Media query para computador */
+@media (min-width: 1024px) {
+  .header-ghibli {
+    padding: 16px 0;
+  }
+  .pelicula {
+    width: 31%;
+  }
+}
+/* Media query para tablet */
+@media (min-width: 768px) {
+  .iframe-header {
+    width: 100%;
+    height: 400px;
+  }
+  .pelicula {
+    width: 47%;
+  }
+}
 /* Media query para computador */
 @media (min-width: 1024px) {
   .header-ghibli {
