--- a/src/style.css
+++ b/src/style.css
@@ -1,151 +1,178 @@
 /* Reset CSS */
 body {
-  background-color: #3b67937f;
+    background-color: #3b67937f;
 }
+
 #header {
-  background-image: url('https://i.postimg.cc/FRz3f2dz/Dise-o-sin-t-tulo-2-1-1.png');
-  background-size: auto 100% ;
-  background-position: center;
-  animation: backgroundScroll 25s linear infinite;
-  /* Establece la animación de desplazamiento de fondo */
+    background-image: url('https://i.postimg.cc/FRz3f2dz/Dise-o-sin-t-tulo-2-1-1.png');
+    background-size: auto 100%;
+    background-position: center;
+    animation: backgroundScroll 25s linear infinite;
+    /* Establece la animación de desplazamiento de fondo */
 }
+
 @keyframes backgroundScroll {
-  0% {
-      background-position: 0 0;
-      /* Inicia las imágenes en la posición inicial */
-  }
-  100% {
-      background-position: 100% 100%;
-      /* Desplaza las imágenes diagonalmente */
-  }
-}#goHomeButton,
+    0% {
+        background-position: 0 0;
+        /* Inicia las imágenes en la posición inicial */
+    }
+
+    100% {
+        background-position: 100% 100%;
+        /* Desplaza las imágenes diagonalmente */
+    }
+}
+
+#goHomeButton,
 #showFilmsButton,
-.ordenador{
-background-color:  #406f9de4;
-color: white;
-padding: 10px 20px;
-font-size: 16px;
-border: none;
-cursor: pointer;
-border-radius: 4px;
-text-decoration: none;
+.ordenador {
+    background-color: #406f9de4;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    text-decoration: none;
 }
+
 h5 {
-  height: 5%;
-  width: 15%;
-  font: small-caps 80%/80%;
-  color: beige;
-  background-color: #406f9de4;
-  font-size: 200%;
-  text-align: center;
-  border-radius: 10%;
-  margin: auto;
+    height: 5%;
+    width: 15%;
+    font: small-caps 80%/80%;
+    color: beige;
+    background-color: #406f9de4;
+    font-size: 200%;
+    text-align: center;
+    border-radius: 10%;
+    margin: auto;
 }
+
 .buscador {
-display: flex;
-justify-content: center;
-align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 h1 {
-  height: 200%;
-  width: 40%;
-  font: small-caps 80%/80% serif;
-  color: #406f9de4;
-  background-color: #efebe5bd;
-  font-size: 630%;
-  text-align: center;
-  border-radius: 10%;
-  margin: auto;
+    height: 200%;
+    width: 40%;
+    font: small-caps 80%/80% serif;
+    color: #406f9de4;
+    background-color: #efebe5bd;
+    font-size: 630%;
+    text-align: center;
+    border-radius: 10%;
+    margin: auto;
 }
+
 h3 {
-  height: 10%;
-  width: 70%;
-  font: small-caps 100%/100% serif;
-  color: beige;
-  background-color: #406f9de4;
-  font-size: 200%;
-  border-radius: 10%;
-  text-align: center;
-  margin: auto;
+    height: 10%;
+    width: 70%;
+    font: small-caps 100%/100% serif;
+    color: beige;
+    background-color: #406f9de4;
+    font-size: 200%;
+    border-radius: 10%;
+    text-align: center;
+    margin: auto;
 }
+
 h2 {
-font-size: 20px;
-margin-bottom: 8px;
-text-align: center;
-color: rgb(255, 250, 250);
+    font-size: 20px;
+    margin-bottom: 8px;
+    text-align: center;
+    color: rgb(255, 250, 250);
 }
-p{
-background-color:rgb(226, 220, 220);
-font: size 30px;
-text-align: center ;
-color: #535050;
+
+p {
+    background-color: rgb(226, 220, 220);
+    font: size 30px;
+    text-align: center;
+    color: #535050;
 }
-input{
-outline: none;
-box-sizing: border-box;
-height:20%;
-width: 20%;
-color: black;
-border-radius: 50px;
-font-size: 20px;
-border: 3px solid #406f9de4;
-transition: all .7s ease;
-display: flex;
-justify-content: center;
-align-items: center;
-text-align: center;
-font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+
+input {
+    outline: none;
+    box-sizing: border-box;
+    height: 20%;
+    width: 20%;
+    color: black;
+    border-radius: 50px;
+    font-size: 20px;
+    border: 3px solid #406f9de4;
+    transition: all .7s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
-.primera-interfaz{
-display: block;
+
+.primera-interfaz {
+    display: block;
 }
-.segunda-interfaz{
-display: none;
+
+.segunda-interfaz {
+    display: none;
 }
+
 #contenedor-peliculas {
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style-type: none;
 }
+
 #contenedor-peliculas .pelicula {
-border: 3px solid#406f9d96 ; /* Cambia "red" al color de borde deseado */
-border-radius: 5%;
-margin: 10px;
-text-align: center;
-box-shadow:  0px 2px 6px rgba(0, 0, 0, 20);
-background-color: #3b6793f8;
+    border: 3px solid#406f9d96;
+    /* Cambia "red" al color de borde deseado */
+    border-radius: 5%;
+    margin: 10px;
+    text-align: center;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 20);
+    background-color: #3b6793f8;
 }
+
 #contenedor-peliculas .pelicula .imagen-pelicula {
-width: 70%; /* Ajusta el ancho de la imagen según tus necesidades */
-margin: 0 auto; /* Centra horizontalmente la imagen */
-border-radius: 5%;
-box-shadow:  0px 2px 6px rgba(0, 0, 0, 20);
+    width: 70%;
+    /* Ajusta el ancho de la imagen según tus necesidades */
+    margin: 0 auto;
+    /* Centra horizontalmente la imagen */
+    border-radius: 5%;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 20);
 }
+
 /* Media query para computador */
 @media (min-width: 1024px) {
-.header-ghibli {
-  padding: 16px 0;
+    .header-ghibli {
+        padding: 16px 0;
+    }
+
+    .pelicula {
+        width: 31%;
+    }
 }
-.pelicula {
-  width: 31%;
-}
-}
+
 /* Media query para tablet */
 @media (min-width: 768px) {
-.iframe-header {
-  width: 100%;
-  height: 400px;
+    .iframe-header {
+        width: 100%;
+        height: 400px;
+    }
+
+    .pelicula {
+        width: 47%;
+    }
 }
-.pelicula {
-  width: 47%;
-}
-}
+
 /* Media query para computador */
 @media (min-width: 1024px) {
-.header-ghibli {
-  padding: 16px 0;
-}
-.pelicula {
-  width: 31%;
-}
+    .header-ghibli {
+        padding: 16px 0;
+    }
+
+    .pelicula {
+        width: 31%;
+    }
 }
