--- a/src/style.css
+++ b/src/style.css
@@ -86,16 +86,6 @@ h2 {
   text-align: center;
   color: rgb(255, 250, 250);
 }
-
-p {
-
-  font-size: 20px;
-  /* Cambiar el tamaño de fuente del texto */
-  color: #ffffff;
-  text-align: center;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
 input {
   outline: none;
   box-sizing: border-box;
@@ -120,13 +110,33 @@ input {
 .segunda-interfaz {
   display: none;
 }
+p {
+  font-size: 20px;
+  text-align: center;
+  color: #fffefe;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+#popup-container {
+  position: absolute;
+  top: 50%;
+  right: 75%;
+  height: 350px;
+  width: 290px;
+  padding: 10px;
+  background-color: #406f9dd9;
+  box-shadow: 0 2px 5px rgb(255, 255, 255);
+  display: none;
+  transform: translate(0, -30%);
 
+}
 #contenedor-peliculas {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   list-style-type: none;
 }
+
+
 
 #contenedor-peliculas .pelicula {
   border: 3px solid#406f9d96;
@@ -136,10 +146,11 @@ input {
   text-align: center;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 20);
   background-color: #3b6793c9;
+  width: 25%;
 }
 
 #contenedor-peliculas .pelicula .imagen-pelicula {
-  width: 70%;
+  width: 55%;
   /* Ajusta el ancho de la imagen según tus necesidades */
   margin: left;
   /* Centra horizontalmente la imagen */
@@ -194,169 +205,6 @@ footer .redes-sociales .instagram:hover {
   background: #ee80a5;
 }
 
-#popup-container {
-  position: absolute;
-  top: 50%;
-  right: 70%;
-  height: 350px;
-  width: 290px;
-  padding: 10px;
-  background-color: #406f9dd9;
-  box-shadow: 0 2px 5px rgb(255, 255, 255);
-  display: none;
-  transform: translate(0, -35%);
-
-}
-
-.popup-content p {
-  font-size: 20px;
-  /* Cambiar el tamaño de fuente del texto */
-  color: #ffffff;
-  text-align: center;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-
-
-#header {
-  background-image: url('https://i.postimg.cc/FRz3f2dz/Dise-o-sin-t-tulo-2-1-1.png');
-  background-size: auto 100%;
-  background-position: center;
-  animation: backgroundScroll 25s linear infinite;
-  /* Establece la animación de desplazamiento de fondo */
-}
-
-@keyframes backgroundScroll {
-  0% {
-    background-position: 0 0;
-    /* Inicia las imágenes en la posición inicial */
-  }
-
-  100% {
-    background-position: 100% 100%;
-    /* Desplaza las imágenes diagonalmente */
-  }
-}
-
-#goHomeButton,
-#showFilmsButton,
-.ordenador {
-  background-color: #406f9de4;
-  color: white;
-  padding: 10px 20px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  border-radius: 4px;
-  text-decoration: none;
-}
-
-h5 {
-  height: 5%;
-  width: 15%;
-  font: small-caps 80%/80%;
-  color: beige;
-  background-color: #406f9de4;
-  font-size: 200%;
-  text-align: center;
-  border-radius: 10%;
-  margin: auto;
-}
-
-.buscador {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-h1 {
-  height: 200%;
-  width: 40%;
-  font: small-caps 80%/80% serif;
-  color: #406f9de4;
-  background-color: #efebe5bd;
-  font-size: 630%;
-  text-align: center;
-  border-radius: 10%;
-  margin: auto;
-}
-
-h3 {
-  height: 10%;
-  width: 70%;
-  font: small-caps 100%/100% serif;
-  color: beige;
-  background-color: #406f9de4;
-  font-size: 200%;
-  border-radius: 10%;
-  text-align: center;
-  margin: auto;
-}
-
-h2 {
-  font-size: 20px;
-  margin-bottom: 8px;
-  text-align: center;
-  color: rgb(255, 250, 250);
-}
-
-p {
-  background-color: rgb(226, 220, 220);
-  font: size 30px;
-  text-align: center;
-  color: #535050;
-}
-
-input {
-  outline: none;
-  box-sizing: border-box;
-  height: 20%;
-  width: 20%;
-  color: black;
-  border-radius: 50px;
-  font-size: 20px;
-  border: 3px solid #406f9de4;
-  transition: all .7s ease;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
-}
-
-.primera-interfaz {
-  display: block;
-}
-
-.segunda-interfaz {
-  display: none;
-}
-
-#contenedor-peliculas {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  list-style-type: none;
-}
-
-#contenedor-peliculas .pelicula {
-  border: 3px solid#406f9d96;
-  /* Cambia "red" al color de borde deseado */
-  border-radius: 5%;
-  margin: 10px;
-  text-align: center;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 20);
-  background-color: #3b6793f8;
-}
-
-#contenedor-peliculas .pelicula .imagen-pelicula {
-  width: 70%;
-  /* Ajusta el ancho de la imagen según tus necesidades */
-  margin: 0 auto;
-  /* Centra horizontalmente la imagen */
-  border-radius: 5%;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 20);
-}
 
 /* Media query para computador */
 @media (min-width: 1024px) {
