--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,7 @@ h2 {
   text-align: center;
   color: rgb(255, 250, 250);
 }
+
 input {
   outline: none;
   box-sizing: border-box;
@@ -110,12 +111,14 @@ input {
 .segunda-interfaz {
   display: none;
 }
+
 p {
   font-size: 20px;
   text-align: center;
   color: #fffefe;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
+
 #popup-container {
   position: absolute;
   top: 50%;
@@ -129,6 +132,7 @@ p {
   transform: translate(0, -30%);
 
 }
+
 #contenedor-peliculas {
   display: flex;
   flex-wrap: wrap;
@@ -160,17 +164,8 @@ p {
 
 footer img {
 
-  height: 1.5%;
-}
+  height: 50px;
 
-footer .redes-sociales {
-  display: flex;
-  align-items: center;
-  background-color: #406f9d90;
-  padding: 11px;
-  width: 40%;
-  height: 25%;
-  margin: auto;
 }
 
 footer .contenedor {
@@ -178,15 +173,25 @@ footer .contenedor {
   justify-content: center;
 }
 
+footer .redes-sociales {
+  display: flex;
+  align-items: center;
+  background-color: #406f9d90;
+  padding: 11px;
+  width: 30%;
+  height: 25%;
+  margin: auto;
+}
+
 footer .redes-sociales a {
-  color: #fff;
-  text-align: center;
-  width: 24px;
-  display: block;
-  padding: 4px;
-  border-radius: 8px;
-  font-size: 5px;
+  display: flex;
+  align-items: center;
+  width: 25%;
+  padding: 25 px;
+  height: 60px;
   margin: 0 20px;
+  justify-content: center;
+  /* Centrar los iconos horizontalmente */
 }
 
 footer .redes-sociales .twitter:hover {
@@ -215,10 +220,7 @@ footer .redes-sociales .instagram:hover {
   .pelicula {
     width: 31%;
   }
-
-}
-
-/* Media query para tablet */
+}/* Media query para tablet */
 @media (min-width: 768px) {
   .iframe-header {
     width: 100%;
@@ -237,5 +239,4 @@ footer .redes-sociales .instagram:hover {
   .pelicula {
     width: 47%;
   }
-
 }
