--- a/src/style.css
+++ b/src/style.css
@@ -123,12 +123,13 @@ p {
   position: absolute;
   top: 50%;
   right: 75%;
-  height: 350px;
+  height: auto;
   width: 290px;
   padding: 10px;
   background-color: #406f9dd9;
   box-shadow: 0 2px 5px rgb(255, 255, 255);
-  display: none;
+  border-radius: 15%;
+  display: grid;
   transform: translate(0, -30%);
 
 }
@@ -210,33 +211,43 @@ footer .redes-sociales .instagram:hover {
   background: #ee80a5;
 }
 
-
-/* Media query para computador */
-@media (min-width: 1024px) {
-  .header-ghibli {
-    padding: 16px 0;
+ /* Media query para tablet */
+ @media (min-width: 768px) {
+    .iframe-header {
+      width: 100%;
+      height: 400px;
+    }
+  
+    .pelicula {
+      width: 47%;
+    }
+    
+    .iframe-header {
+      width: 100%;
+      height: 400px;
+    }
+  
+    .pelicula {
+      width: 47%;
+    }
   }
-
-  .pelicula {
-    width: 31%;
+  
+  /* Media query para teléfono */
+  @media (max-width: 480px) {
+    h1 {
+      font-size: 300%;
+    }
+  
+    h2 {
+      font-size: 150%;
+    }
+  
+    input {
+      width: 80%;
+    }
+  
+    #contenedor-peliculas .pelicula {
+      width: 90%;
+    }
   }
-}/* Media query para tablet */
-@media (min-width: 768px) {
-  .iframe-header {
-    width: 100%;
-    height: 400px;
-  }
-
-  .pelicula {
-    width: 47%;
-  }
-
-  .iframe-header {
-    width: 100%;
-    height: 400px;
-  }
-
-  .pelicula {
-    width: 47%;
-  }
-}
+  
